Finished Obstacle, Scene, and Victim classes.

--- a/public_html/sandbox/mike_dom.html
+++ b/public_html/sandbox/mike_dom.html
@@ -30,7 +30,7 @@ and open the template in the editor.
         </div>
         <div>
             <p>Please type in what insurance you have from the list</p>
-            <input type="text" name="insuranceName" id="insuranceName"></input>
+            <input type="text" name="insuranceName" id="insuranceName">
         </div>    
         <p><button onclick="findInsurance()">Find insurance</button></p>
         
