--- a/public_html/sandbox/weekly_reflection.html
+++ b/public_html/sandbox/weekly_reflection.html
@@ -29,6 +29,14 @@ I have yet to receive any grades or feedback for this class, and I’m a little 
 </p>
 <p>I ran into several problems this week with my example from AJAX interactions. Will taught about it last week, so I tried to make it more advanced. I tried explaining how a CAPCHA works. The example I found used PHP, AJAX, JavaScript and HTML. Since I don’t know any PHP, this made it even more difficult. I tried using JSfiddle.net but it doesn’t support PHP. I then did it on my own server and got it working, but it took a long time (I’m fine with, but I feel like it was just troubleshooting and I wasn’t learning too much). 
 </p>
+<h3>5-23-15</h3>
+<p>This week was fun. I tried to create code that could be used for the app that we are most likely to create.
+    I figured if I start making things that I will use in the future, I will have a better chance of understanding how it
+    works and remembering how to do it. I ran into some problems with the CSS animations. I wanted to make a loading animation but 
+    I needed assistance from W3 schools. I didn't want to copy the code directly and was unable to come up with anything on my own.</p>
+<p>
+    I also ran into issues with JavaScript. I tried using JSON objects to link data together, but that didn't work out too well. However, I was able to
+    mess around with the code enough to get it to stick together, even if I don't think it will provide any use in the future app. All in all it was a fun week and I learned a lot.</p>
         
     </body>
 </html>
