--- a/public_html/sandbox/weekly_reflection.html
+++ b/public_html/sandbox/weekly_reflection.html
@@ -37,6 +37,12 @@ I have yet to receive any grades or feedback for this class, and I’m a little 
 <p>
     I also ran into issues with JavaScript. I tried using JSON objects to link data together, but that didn't work out too well. However, I was able to
     mess around with the code enough to get it to stick together, even if I don't think it will provide any use in the future app. All in all it was a fun week and I learned a lot.</p>
-        
+<h3>5-30-15</h3>        
+<p>This was a difficult week with travel for work. I had lack of Internet most days, but was able to attend my group meeting.
+Working without internet to try and use CSS transitions, JS objects was difficult. However, I found a good resource online for free and 
+downloaded it. It's called Eloquent JavaScript and they have a free pdf online. I downloaded that and used that as my resource this week.
+Our group talked about being more involved throughout the week and communicating and testing each others code, which I
+think is a great idea. I'm hoping that I can get as good as Logan. I've been thinking about our app and what I would like to add to it. I'm sure
+we will be able to create a decent looking/working app by the time this course is finished.</p>
     </body>
 </html>
