--- a/public_html/sandbox/weekly_reflection.html
+++ b/public_html/sandbox/weekly_reflection.html
@@ -21,13 +21,22 @@ and open the template in the editor.
 <p>I listened to the other pitches. I thought some students had some great ideas. Most of them seemed possible. A few seemed way too complex or difficult to create, for me at least. I would like to work on a project that uses the API other another app. I would like to learn how API’s work and get a better understanding in that field. I feel like that is extremely important in today’s app world.  
 </p>
 <h3>5-9-15</h3>
-<p>This week I taught on local storage. It was a very interesting topic for me. I ran into a few issues because I didn’t know anything about it before teaching about it. So I wasn’t able to answer all of my group members questions. Also, I’ve never really inspected cookies before, so that was fun and interesting. The big takeaway that I had from this week was learning that cookies are becoming obsolete and also the two different types of local storage: sessionStorage and localStorage. Session is temporary and ends when the tab or browser is exited or closed. localStorage lasts longer, and can be sued between tabs. The storage is also not cross browser.</p>
+<p>This week I taught on local storage. It was a very interesting topic for me. I ran into a few issues because I didn’t know anything about it before teaching about it. So I wasn’t 
+    able to answer all of my group members questions. Also, I’ve never really inspected cookies before, so that was fun and interesting. The big takeaway that I had from this week 
+    was learning that cookies are becoming obsolete and also the two different types of local storage: sessionStorage and localStorage. Session is temporary and ends when the tab 
+    or browser is exited or closed. localStorage lasts longer, and can be sued between tabs. The storage is also not cross browser.</p>
 
 <h3>5-16-15</h3>
-<p>This week was really difficult. I think I bit off more than I could chew with presenting on AJAX interactions. I did my best, but I still don’t understand exactly how the transactions take place. I understand the concept, but still don’t quite get it. I think Logan and Will understand better than I do, which is good for me because they are the ones teaching me each week.
-I have yet to receive any grades or feedback for this class, and I’m a little worried. My grade still says ‘0%’, which still terrifies me today even though I know it is outdated. Will taught on CSS3 transitions, which I went over in CIT 230. Those I understood pretty well. Logan went over JSON, which again is something difficult for me to understand. 
+<p>This week was really difficult. I think I bit off more than I could chew with presenting on AJAX interactions. I did my best, but I still don’t understand exactly how the 
+    transactions take place. I understand the concept, but still don’t quite get it. I think Logan and Will understand better than I do, which is good for me because they are
+    the ones teaching me each week.
+I have yet to receive any grades or feedback for this class, and I’m a little worried. My grade still says ‘0%’, which still terrifies me today even though I know it is outdated. 
+Will taught on CSS3 transitions, which I went over in CIT 230. Those I understood pretty well. Logan went over JSON, which again is something difficult for me to understand. 
 </p>
-<p>I ran into several problems this week with my example from AJAX interactions. Will taught about it last week, so I tried to make it more advanced. I tried explaining how a CAPCHA works. The example I found used PHP, AJAX, JavaScript and HTML. Since I don’t know any PHP, this made it even more difficult. I tried using JSfiddle.net but it doesn’t support PHP. I then did it on my own server and got it working, but it took a long time (I’m fine with, but I feel like it was just troubleshooting and I wasn’t learning too much). 
+<p>I ran into several problems this week with my example from AJAX interactions. Will taught about it last week, so I tried to make it more advanced. I tried
+    explaining how a CAPCHA works. The example I found used PHP, AJAX, JavaScript and HTML. Since I don’t know any PHP, this made it even more difficult. I 
+    tried using JSfiddle.net but it doesn’t support PHP. I then did it on my own server and got it working, but it took a long time (I’m fine with, but I
+    feel like it was just troubleshooting and I wasn’t learning too much). 
 </p>
 <h3>5-23-15</h3>
 <p>This week was fun. I tried to create code that could be used for the app that we are most likely to create.
@@ -44,5 +53,13 @@ downloaded it. It's called Eloquent JavaScript and they have a free pdf online. 
 Our group talked about being more involved throughout the week and communicating and testing each others code, which I
 think is a great idea. I'm hoping that I can get as good as Logan. I've been thinking about our app and what I would like to add to it. I'm sure
 we will be able to create a decent looking/working app by the time this course is finished.</p>
+    <h3>6-6-15</h3>
+<p>
+This was a good week. I did DOM manipulation and spent a lot of time just researching what exactly the DOM was. I finally am beginning to understand. I think this 
+was my 'ah ha' week. Things started to be a lot less stressful and I'm looking forward to planning for designing the app. I've been able to research the topics and just 
+stratch the surface, but now I'm excited to use JavaScript and style the webpages better. I was able to use some JavaScript libaries and use Jquery this week 
+(things I haven't use previously). You can see my example <a href="./mike_dom_manipulation.html">here.</a> My teammatess have been doing a good job preparing and presenting.
+I'm lucky to have them in my group.
+</p>
     </body>
 </html>
