--- a/public_html/sandbox/will_dom.html
+++ b/public_html/sandbox/will_dom.html
@@ -18,6 +18,7 @@ document.getElementById()<br>
 document.getElementsByTagName()<br>
 document.getElementsByClassName()
 <p></p>
+<div id="test">Test</div>
 
 <script>
 //Demo1
@@ -66,7 +67,7 @@ This can be manipulated via DOM.
 
 <script>
 function clickFunction() {
-    document.write("That's It!");
+    document.write("That's It!").innerHTML;
     }
 </script>
 
